--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class="d-flex flex-column flex-md-row align -items center p-3 md-4 mb-3 bg-white-border-bottom">
-        <h5 class="my-0 mr-md-auto brand font-weight-normal">𝓟𝓲𝔃𝔃𝓪 𝓜𝓸𝓳𝓳𝓸</h5>
+        <h3 class="my-0 mr-md-auto brand font-weight-normal">𝓟𝓲𝔃𝔃𝓪 𝓜𝓸𝓳𝓳𝓸</h3>
+        <nav class="my-0 my-md-0 mr-md-3">
+            <a class="p-2 text-dark" href="#">Enterprise</a>
+            <a class="p-2 text-dark" href="#">About</a>
+            <a class="p-2 text-dark" href="#">Pricing</a>
+        </nav>
     </div>
 </body>
 </html>
