added navbar content

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>pizzaMojjo</title>
-
-</head>
-<body>
-    <div class="d-flex flex-column flex-md-row align -items center p-3 md-4 mb-3 bg-white-border-bottom">
-        <h3 class="my-0 mr-md-auto brand font-weight-normal">𝓟𝓲𝔃𝔃𝓪 𝓜𝓸𝓳𝓳𝓸</h3>
-        <nav class="my-0 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="#">Enterprise</a>
-            <a class="p-2 text-dark" href="#">About</a>
-            <a class="p-2 text-dark" href="#">Pricing</a>
-        </nav>
+  </head>
+  <body>
+    <div
+    class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-lg nav"
+  >
+    <h5 class="my-0 mr-md-auto brand font-weight-normal">𝓟𝓲𝔃𝔃𝓪 𝓜𝓸𝓳𝓳𝓸</h5>
+    <nav class="my-2 my-md-0 mr-md-3">
+      <a class="p-2 text-dark" href="#">Enterprise</a>
+      <a class="p-2 text-dark" href="#">About</a>
+      <a class="p-2 text-dark" href="#">Pricing</a>
+    </nav>
+    <a class="btn btn-outline-default btn-nav" href="#">Mojjo</a>
+  </div>
     </div>
-</body>
+  </body>
 </html>
