--- a/index.html
+++ b/index.html
@@ -19,6 +19,36 @@
     </nav>
     <a class="btn btn-outline-default btn-nav" href="#">Mojjo</a>
   </div>
+    <div class="container".>
+      <div class="row">
+        <div class="col col-md-6">
+        <div class="pl-5">
+         <form id="priceform">
+           <div class=form-group>
+             <label
+           </div>
+         </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div> 
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
