--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
         <div class="pl-5">
          <form id="priceform">
            <div class=form-group>
-             <label
-           </div>
+             <label for="number">choose your pizza size</label>
+             <select class="form-control" id="pizzasize">
+             <option value="600"selected>small size</option>
+             <option value="900">Medium size</option>
+             <option value="1200">Large size</option>
+            </select>
+           </div> 
          </form>
+         
 
 
 
