added crust options

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
             </select>
            </div> 
          </form>
+         <div class="form-group">
+           <label for="number">choose the crust on your pizza</label>
+             <select class="form-control" id="crust type">
+               <option value="80">Deep pan</option>
+               <option value="85">Classic crust</option>
+               <option value="90">thin 'n' crispy</option>
+               <option value="100">Cheesy crust</option>
+               <option value="105">Glutten Free Base</option>
+             </select>
+         </div>
          
 
 
