added toppings options

--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
                <option value="105">Glutten Free Base</option>
              </select>
          </div>
+         <div class="form-group">
+           <label for="number">choose toppings on your pizza</label>
+           <select id="pizzaTopping" class="form-control">
+             <option value="100">pepperoni</option>
+             <option value="110">Mushrooms</option>
+             <option value="120">Onions</option>
+             <option value="100">Sausage</option>
+             <option value="90">Bacon</option>
+             <option value="100">Extra cheese</option>
+             <option value="120">Black olives</option>
+             <option value="100">Green peppers</option>
+             <option value="100">Pineapple</option>
+             <option value="10">Spinach</option>
+           </select>
+         </div>
          
 
 
