added number options

--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
              <option value="10">Spinach</option>
            </select>
          </div>
+         <div class="form-group">
+           <label for="number">How many pizzas would you like*</label>
+           <input
+           required
+           id="pizzaNumber"
+           type="number"
+           placeholder="Enter the number of pizzas"
+           class="form-control"
+           id="number"
+           />
+         </div>
+         <div class="form-group">
+           <label for="number"
+         </div>
+
          
 
 
