added location options

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
          </div>
          <div class="form-group">
            <label for="number"
+             >Do you want it delivered? Enter your location.</label>
+           >
+           <select id=Pizzaloaction class="form-control">
+             <option value="0" selected
+             >please select your area of residence</option>
+             <option value="500">Nairobi</option>
+             <option value="900">Outside Nairobi</option>
+           </select>
          </div>
 
          
