added submit button

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
              <option value="900">Outside Nairobi</option>
            </select>
          </div>
+         <button
+           id="submit"
+           type="submit"
+           class="btn btn-default btn-outline-default btn-nav">
+
+           order
+         </button>
 
          
 
