added topping output

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
           <td id="crustOutput" class="text-center"></td>
         </tr>
         <tr>
+          <td class="totals text-center">Topping</td>
+          <td id="toppingOutput" class="text-center"></td>
+        </tr>
+        <tr>
           <td class="totals text-center">Quantity</td>
           <td id="quantityOutput" class="text-center"></td>
         </tr>
