--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="pl-5">
          <form id="priceForm">
            <div class=form-group>
-             <label for="number">choose your pizza size</label>
+             <label for="number">choose your pizza size*</label>
              <select class="form-control" id="pizzaSize">
              <option value="600"selected>small size</option>
              <option value="900">Medium size</option>
@@ -34,7 +34,7 @@
            </div> 
          </form>
          <div class="form-group">
-           <label for="number">choose the crust on your pizza</label>
+           <label for="number">choose the crust on your pizza*</label>
              <select class="form-control" id="pizzaCrust">
                <option value="80">Deep pan</option>
                <option value="85">Classic crust</option>
@@ -44,7 +44,7 @@
              </select>
          </div>
          <div class="form-group">
-           <label for="number">choose toppings on your pizza</label>
+           <label for="number">choose toppings on your pizza*</label>
            <select id="pizzaTopping" class="form-control">
              <option value="100">pepperoni</option>
              <option value="110">Mushrooms</option>
