--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!--links-->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Pizza Mojjo</title>
   </head>
   <body>
@@ -135,6 +135,6 @@
     </div>
     <p id="rights"> copyright(c)Balvine mbari@2020</p>
     <!--script links-->
-    <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
