--- a/index.html
+++ b/index.html
@@ -19,9 +19,21 @@
         <a class="p-2 text-dark" href="#">Enterprise</a>
         <a class="p-2 text-dark" href="#">About</a>
         <a class="p-2 text-dark" href="#">Pricing</a>
+        <a class="p-2 text-dark" href="#">Contacts</a>
       </nav>
       <a class="btn btn-outline-default btn-nav" href="#">Mojjo</a>
     </div>
+    <section id="ABOUT US">
+      <div id="mabout" class="text-center">
+      <h2> <strong>ABOUT US</strong> </h2>
+      <div class="container">
+      <p>pizza Mojjo is the best pizza restaurant located in shell belleavue in Ongata Rongai we served and delivers 
+      best pizzas countrywide in our various pizza restaurant.
+      </p>we have the best menu for our customer serving all pizza types of pizza with their various toppingsand very affordable prices 
+      </div>
+      </div>
+      </section>
+      
 
     <!--the body-->
     <div class="container">
@@ -81,8 +93,8 @@
                   <option value="0" selected
                     >Please select your area of residence</option
                   >
-                  <option value="500">Nairobi</option>
-                  <option value="900">Outside Nairobi</option>
+                  <option value="200">Nairobi</option>
+                  <option value="500">Outside Nairobi</option>
                 </select>
               </div>
               <button
@@ -133,6 +145,50 @@
         </div>
       </div>
     </div>
+    <section id="contact-us">
+      <div id="mcontact" class="text-center">
+          <div class="mForm">
+            <div class="pl-5">
+              <h2><strong>CONTACT US</strong></h2>
+              <div class="container">
+                  <form action="" class="contact" id="contact-form">
+                      <div class="row">
+                          <div class="col col-12 col-md-12 col-lg-6">
+                              <div class="form-group">
+                                  <input type="text" id="name" name="NAME" value=""
+                                      class="form-control isInput required" placeholder="Name..">
+                              </div>
+                          </div>
+                          <div class="col col-12 col-md-12 col-lg-6">
+                              <div class="form-group">
+                                  <input type="email" id="email" name="EMAIL" value=""
+                                      class="form-control isInput required" placeholder="Email...">
+                              </div>
+                          </div>
+                          <div class="col col-12">
+                              <div class="form-group">
+                                  <textarea class="form-control isInput required" name="MESSAGE" id="message"
+                                      rows="10" value="" placeholder="Your message here..."></textarea>
+                              </div>
+                          </div>
+                          <div class="form-group">
+                              <input type="submit" class="btn btn-primary btn-lg float-left">
+                          </div>
+                         <hr>
+                         <hr>
+                          <div class="form-group">
+                              <input type="reset" class="btn btn-primary btn-lg float-left">
+                          </div>
+                      </div>
+                    </div>
+                  </form>
+              </div>
+          </div> 
+
+      </div>
+  </section>
+
+
     <p id="rights"> copyright(c)Balvine mbari@2020</p>
     <!--script links-->
     <script src="js/script.js"></script>
