added more social icons

--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
 
       </div>
   </section>
+  <section id="social">
+    <div class="msocial">
+    <div class="container">
+    <div class="row">
+    <div class="col-12" id="social-padding">
+    <img src="img/facebook.png" alt="facebook">
+    <img src="img/twitter.png" alt="twitter">
+    <img src="img/you_tube.png" alt="you_tube">
+    </div>
+    </div>
+    <h5>𝓟𝓲𝔃𝔃𝓪 𝓜𝓸𝓳𝓳𝓸 </h5>
+    <h5>2020</h5>
+    </div>
+    
+    </div>
+    </section>
 
 
     <p id="rights"> copyright(c)Balvine mbari@2020</p>
