--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                   <option value="100">Spinach</option>
                 </select>
               </div>
+              
               <div class="form-group">
                 <label for="number">How many pizzas would you like?*</label>
                 <input
@@ -150,7 +151,7 @@
       <div id="mcontact" class="text-center">
           <div class="mForm">
             <div class="pl-5">
-              <h2><strong>CONTACT US</strong></h2>
+              <h2><strong>GIVE US YOUR FEEDBACK</strong></h2>
               <div class="container">
                   <form action="" class="contact" id="contact-form">
                       <div class="row">
@@ -188,23 +189,8 @@
 
       </div>
   </section>
-  <section id="social">
-    <div class="msocial">
-    <div class="container">
-    <div class="row">
-    <div class="col-12" id="social-padding">
-    <img src="img/facebook.png" alt="facebook">
-    <img src="img/twitter.png" alt="twitter">
-    <img src="img/you_tube.png" alt="you_tube">
-    </div>
-    </div>
-    <h5>𝓟𝓲𝔃𝔃𝓪 𝓜𝓸𝓳𝓳𝓸 </h5>
-    <h5>2020</h5>
-    </div>
+  
     
-    </div>
-    </section>
-
 
     <p id="rights"> copyright(c)Balvine mbari@2020</p>
     <!--script links-->
