added scripts link

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         </div>
       </div>
     </div>
+    
     <section id="contact-us">
       <div id="mcontact" class="text-center">
           <div class="mForm">
@@ -194,6 +195,7 @@
 
     <p id="rights"> copyright(c)Balvine mbari@2020</p>
     <!--script links-->
+    <script src="js/jquery-3.4.1-compressed.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
