corrected about us

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
       <p>pizza Mojjo is the best pizza restaurant located in shell belleavue in Ongata Rongai we served and delivers 
       best pizzas countrywide in our various pizza restaurant.
-      </p>we have the best menu for our customer serving all pizza types of pizza with their various toppingsand very affordable prices 
+      </p>we have the best menu for our customer serving all pizza types  with their various toppings and crusts and have very affordable prices 
       </div>
       </div>
       </section>
