added readme information

--- a/index.html
+++ b/index.html
@@ -47,34 +47,34 @@
               <div class="form-group">
                 <label for="number">Choose your Pizza size*</label>
                 <select class="form-control" id="pizzaSize">
-                  <option value="600" selected>Small Pizza</option>
-                  <option value="900">Medium Pizza</option>
-                  <option value="1200">Large Pizza</option>
+                  <option value="600" selected>Small Pizza @Ksh 600</option>
+                  <option value="900">Medium Pizza @Ksh 900</option>
+                  <option value="1200">Large Pizza @Ksh 1200</option>
                 </select>
               </div>
               <div class="form-group">
                 <label for="number">Choose the crust on your pizza*</label>
                 <select id="pizzaCrust" class="form-control">
-                  <option value="80">Deep Pan</option>
-                  <option value="85">Classic Crust</option>
-                  <option value="90">Thin 'n' Crispy</option>
-                  <option value="95">Cheesy Crust</option>
-                  <option value="100">Glutten Free Base</option>
+                  <option value="80">Deep Pan @Ksh 80</option>
+                  <option value="85">Classic Crust @Ksh 85</option>
+                  <option value="90">Thin 'n' Crispy @Ksh 90</option>
+                  <option value="95">Cheesy Crust @Ksh 95</option>
+                  <option value="100">Glutten Free Base @Ksh 100</option>
                 </select>
               </div>
               <div class="form-group">
                 <label for="number">Choose the toppings on your Pizza*</label>
                 <select id="pizzaTopping" class="form-control">
-                  <option value="100">Pepperoni</option>
-                  <option value="110">Mushrooms</option>
-                  <option value="120">Onions</option>
-                  <option value="100">Sausage</option>
-                  <option value="90">Bacon</option>
-                  <option value="100">Extra cheese</option>
-                  <option value="100">Black olives</option>
-                  <option value="100">Green peppers</option>
-                  <option value="100">Pineapple</option>
-                  <option value="100">Spinach</option>
+                  <option value="100">Pepperoni @Ksh 100</option>
+                  <option value="110">Mushrooms @Ksh 110</option>
+                  <option value="120">Onions @Ksh 120</option>
+                  <option value="100">Sausage @Ksh 100</option>
+                  <option value="90">Bacon @Ksh 90</option>
+                  <option value="100">Extra cheese @Ksh 100</option>
+                  <option value="100">Black olives @Ksh 100</option>
+                  <option value="100">Green peppers @Ksh 100</option>
+                  <option value="100">Pineapple @Ksh 100</option>
+                  <option value="100">Spinach @Ksh 100</option>
                 </select>
               </div>
               
