added contacts information

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--links-->
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Pizza Mojjo</title>
@@ -193,7 +193,13 @@
       </div>
   </section>
   
-    
+<div class="contacts">
+  <div class="pl-5">
+    <h4>Contacts</h4>
+    <p>Email:pizzaMojjo@gmail.com</p>
+    <p>Telephone:0790448596</p>
+  </div>
+</div>
 
     <p id="rights"> copyright(c)Balvine mbari@2020</p>
     <!--script links-->
